# Voronoi-Diagram-Encoded-Hashing-for-Effective-and-Efficient-Similarity-Search

./: CMakeLists.txt  README.md
include/IForest_index/: IForest_Flat.h  IForest_HNSW.h  IVFIForest.h  gemc.h  myHNSW.h
include/IK/: IK_utils.h  VD.cpp  VD_multi_dim.cpp  VD_one_dim.cpp  iForest.cpp
include/tools/: AuxStructures.h  RandomGenerator.h  ResHandler.h  SimComputer.h  SimComputer_avx2.h
src/IForest_index/: IForest_Flat.cpp  IForest_HNSW.cpp  IVFIForest.cpp  gemc.cpp  myHNSW.cpp
test/: Exhaustive_Search_with_IKE.cpp  HNSW_with_IKE.cpp  IVF_with_IKE.cpp  exhaustive_search_VD.cpp  exhaustive_search_VD_multi_dim.cpp  exhaustive_search_VD_one_dim.cpp  utils.cpp  utils.h
